// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp.js debe de mostrar <GifExpertApp /> correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddForm
    setCategories={[Function]}
    setLimitNumGifs={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en GifExpertApp.js debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddForm
    setCategories={[Function]}
    setLimitNumGifs={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Arcane"
      key="Arcane"
      limitNumGifs={2}
    />
    <GifGrid
      category="One Piece"
      key="One Piece"
      limitNumGifs={2}
    />
  </ol>
</Fragment>
`;
